--- a/reto-tecnico-backend/.eslintrc.json
+++ b/reto-tecnico-backend/.eslintrc.json
@@ -1,48 +1,51 @@
 {
-    "extends": [
-      "airbnb-base",
-      "plugin:jest/all",
-      "plugin:import/errors",
-      "plugin:import/warnings",
-      "plugin:import/typescript",
-      "plugin:@typescript-eslint/recommended"
-    ],
-    "plugins": [
-      "jest",
-      "@typescript-eslint"
-    ],
-    "root": true,
-    "globals": {},
-    "rules": {
-      "import/no-unresolved": [2, {"commonjs": true, "amd": true}],
-      "import/prefer-default-export": "off",
-      "no-use-before-define": "off",
-      "@typescript-eslint/no-use-before-define": ["error", { "classes": false , "functions":  false}],
-      "max-len": ["error", {
-        "code":  150,
-        "ignoreComments":  true,
-        "ignoreTrailingComments":  true,
-        "ignoreUrls": true,
-        "ignoreStrings": true,
-        "ignoreTemplateLiterals": true
-      }]
-    },
-    "parser": "@typescript-eslint/parser",
-    "env": {},
-    "overrides": [],
-    "settings": {
-      "import/resolver": {
-        "alias": {
-          "map": [
-            ["@src", "./src"],
-            ["@tests", "./tests"],
-            ["@core", "./core"]
-          ],
-          "extensions": [
-            ".ts",
-            ".js"
-          ]
-        }
+  "extends": [
+    "airbnb-base",
+    "plugin:jest/all",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "plugins": [
+    "jest",
+    "@typescript-eslint"
+  ],
+  "root": true,
+  "globals": {},
+  "rules": {
+    "import/extensions": "off",
+    "import/no-unresolved": [2, {
+      "commonjs": true,
+      "amd": true
+    }],
+    "import/prefer-default-export": "off",
+    "linebreak-style": ["error", "windows"],
+    "max-len": ["error", {
+      "code": 150,
+      "ignoreComments": true,
+      "ignoreTrailingComments": true,
+      "ignoreUrls": true,
+      "ignoreStrings": true,
+      "ignoreTemplateLiterals": true
+    }]
+  },
+  "parser": "@typescript-eslint/parser",
+  "env": {},
+  "overrides": [],
+  "settings": {
+    "import/resolver": {
+      "alias": {
+        "map": [
+          ["@src", "./src"],
+          ["@tests", "./tests"],
+          ["@lib", "./libs"]
+        ],
+        "extensions": [
+          ".ts",
+          ".js"
+        ]
       }
     }
   }
+}
