--- a/reto-tecnico-backend/serverless.yml
+++ b/reto-tecnico-backend/serverless.yml
@@ -1,5 +1,5 @@
 service:
-  name: serverless-template
+  name: sls-template
 
 custom:
   webpack:
@@ -9,16 +9,15 @@ custom:
     defaultInherit: true
   globalTables:
     regions: # list of regions in which you want to set up global tables
-      - us-east-2 # Ohio (default region to date for stack)
-      - ap-southeast-2 # Sydney (lower latency for Australia)
+      - us-east-1 # Ohio (default region to date for stack)
     createStack: false
   prune: # automatically prune old lambda versions
     automatic: true
     number: 3
 
 plugins:
-  - serverless-offline
   - serverless-webpack
+  - serverless-offline
   - serverless-iam-roles-per-function
   - serverless-create-global-dynamodb-table
   - serverless-prune-plugin
@@ -26,9 +25,9 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
-  frameworkVersion: ‘1.70.1’
+  frameworkVersion: ‘1.64.1’
   stage: ${opt:stage, 'local'}
-  region: ${opt:region, 'us-east-1'}
+  region: ${opt:region, 'us-east-2'}
   apiGateway:
     minimumCompressionSize: 1024
   environment:
@@ -42,18 +41,24 @@ provider:
       Action:
         - xray:PutTraceSegments
         - xray:PutTelemetryRecords
-      Resource: "*"
+      Resource: '*'
 
 functions:
-  githubnifo:
-    handler: src/handlers/getUserGithub.handler
+  hello:
+    handler: src/handler.hello
     events:
       - http:
           method: get
-          path: github
-  anyUser:
-    handler: src/handlers/getUserX.handler
+          path: hello
+  rootData:
+    handler: src/handler.rootData
     events:
       - http:
           method: get
-          path: github/{user}
+          path: rootData
+  starShipsData:
+    handler: src/handler.starShips
+    events:
+      - http:
+          method: get
+          path: starShips
