--- a/reto-tecnico-backend/tsconfig.json
+++ b/reto-tecnico-backend/tsconfig.json
@@ -14,7 +14,7 @@
     "baseUrl": "./",
     "paths": {
       "@src/*": ["src/*"],
-      "@core/*": ["core/*"],
+      "@lib/*": ["libs/*"],
       "@tests/*": ["tests/*"]
     }
   },
