--- a/reto-tecnico-backend/.eslintrc.json
+++ b/reto-tecnico-backend/.eslintrc.json
@@ -14,17 +14,14 @@
   "root": true,
   "globals": {},
   "rules": {
-    "import/extensions": "off",
-    "import/no-unresolved": [2, {
-      "commonjs": true,
-      "amd": true
-    }],
+    "import/no-unresolved": [2, {"commonjs": true, "amd": true}],
     "import/prefer-default-export": "off",
-    "linebreak-style": ["error", "windows"],
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": ["error", { "classes": false , "functions":  false}],
     "max-len": ["error", {
-      "code": 150,
-      "ignoreComments": true,
-      "ignoreTrailingComments": true,
+      "code":  150,
+      "ignoreComments":  true,
+      "ignoreTrailingComments":  true,
       "ignoreUrls": true,
       "ignoreStrings": true,
       "ignoreTemplateLiterals": true
@@ -39,7 +36,7 @@
         "map": [
           ["@src", "./src"],
           ["@tests", "./tests"],
-          ["@lib", "./libs"]
+          ["@core", "./core"]
         ],
         "extensions": [
           ".ts",
