--- a/reto-tecnico-backend/.eslintrc.json
+++ b/reto-tecnico-backend/.eslintrc.json
@@ -14,6 +14,7 @@
   "root": true,
   "globals": {},
   "rules": {
+    "import/extensions": "off",
     "import/no-unresolved": [2, {"commonjs": true, "amd": true}],
     "import/prefer-default-export": "off",
     "no-use-before-define": "off",
