--- a/reto-tecnico-backend/serverless.yml
+++ b/reto-tecnico-backend/serverless.yml
@@ -44,12 +44,6 @@ provider:
       Resource: '*'
 
 functions:
-  hello:
-    handler: src/handler.hello
-    events:
-      - http:
-          method: get
-          path: hello
   rootData:
     handler: src/handler.rootData
     events:
@@ -67,11 +61,16 @@ functions:
     events:
       - http:
           method: post
-          path: register-employee
-
+          path: /employee/register-employee
+  getEmployee:
+    handler: src/handler.getEmployee
+    events:
+      - http:
+          method: get
+          path: /employee/{dni}
 resources:
   Resources:
-    usersTable:
+    employee:
       Type: AWS::DynamoDB::Table
       Properties:
         TableName: employee
