--- a/reto-tecnico-backend/serverless.yml
+++ b/reto-tecnico-backend/serverless.yml
@@ -73,3 +73,18 @@ functions:
       - http:
           method: get
           path: /employee/{dni}
+resources:
+  Resources:
+    employee:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: employee
+        AttributeDefinitions:
+          - AttributeName: dni
+            AttributeType: S
+        KeySchema:
+          - AttributeName: dni
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
